--- a/dj/dj_app/static/flight_deet.css
+++ b/dj/dj_app/static/flight_deet.css
@@ -39,6 +39,7 @@ p {
   margin-top: 20px;
   border: black;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .search-form input[type="text"] {
