--- a/dj/dj_app/static/flight_info.css
+++ b/dj/dj_app/static/flight_info.css
@@ -115,3 +115,13 @@ tbody tr:nth-child(even) {
     width: 100%;
   }
 }
+
+table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+body {
+  margin-bottom: 100px;
+}
